# bgg-assistant

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md
docs/architecture/: docker-compose-spec.md  folder-structure.md  pitfalls-and-mitigations.md
docs/steps/: 01-project-setup.md  02-data-and-eda.md  03-recommender.md  04-rag-pipeline.md  05-api-and-frontend.md  06-docker-and-deploy.md  07-ci-cd-and-readme.md
notebooks/: 01_eda.ipynb
scripts/: download_kaggle_data.py  preprocess_to_parquet.py
src/bgg/: config.py
src/bgg/preprocessing/: __init__.py  export.py  games.py  ratings.py  spark.py
src/bgg_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py
