[project]
name = "bgg-assistant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.3",
    "mlflow>=2.14,<3",
    "streamlit>=1.35",
    "httpx>=0.27",
    "pandas>=2.2",
    "pyarrow>=16.0",
]

[project.optional-dependencies]
spark = ["pyspark>=3.5,<4"]
rag = [
    "chromadb>=0.5",
    "langchain>=0.2",
    "langchain-community>=0.2",
    "sentence-transformers>=3.0",
    "pymupdf>=1.24",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "kaggle>=1.6",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
